--- a/pom.xml
+++ b/pom.xml
@@ -121,8 +121,13 @@
 						<!-- <excludeProperty>git.user.*</excludeProperty> -->
 					<!--</excludeProperties>-->
 					<includeOnlyProperties>
-						 <includeOnlyProperty>^git.commit.id.full$</includeOnlyProperty>
+						<includeOnlyProperty>^git.commit.id.full$</includeOnlyProperty>
 						<includeOnlyProperty>^git.commit.user.name$</includeOnlyProperty>
+						<includeOnlyProperty>^git.tags$</includeOnlyProperty>
+						<includeOnlyProperty>^git.commit.id.describe$</includeOnlyProperty>
+						<includeOnlyProperty>^git.commit.time$</includeOnlyProperty>
+						<includeOnlyProperty>^git.commit.id$</includeOnlyProperty>
+						<includeOnlyProperty>^git.branch$</includeOnlyProperty>
 					</includeOnlyProperties>
 					<!-- Controls the length of the abbreviated git commit it (git.commit.id.abbrev) -->
 
